docs: rewrite README for accuracy and reproducibility
Align documentation with the actual repository state and provide a
clear, step-by-step reproduction guide for the empirical study.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>